<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListUsersFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/textViewFirstName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewFirstName1"
                app:layout_constraintStart_toEndOf="@+id/imageView1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLastName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewLastName1"
                app:layout_constraintStart_toEndOf="@+id/textViewFirstName1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phoneNumber1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/phoneNumber1"
                app:layout_constraintStart_toEndOf="@+id/imageView1"
                app:layout_constraintTop_toBottomOf="@+id/textViewFirstName1" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="107dp"
                android:layout_height="109dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/textViewFirstName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewFirstName2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLastName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewLastName2"
                app:layout_constraintStart_toEndOf="@+id/textViewFirstName2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phoneNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/phoneNumber2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textViewFirstName2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="107dp"
                android:layout_height="109dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/textViewFirstName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewFirstName3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLastName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewLastName3"
                app:layout_constraintStart_toEndOf="@+id/textViewFirstName3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phoneNumber3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/phoneNumber3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textViewFirstName3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="107dp"
                android:layout_height="109dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/textViewFirstName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewFirstName4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLastName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/textViewLastName4"
                app:layout_constraintStart_toEndOf="@+id/textViewFirstName4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phoneNumber4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/phoneNumber4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/textViewFirstName4" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="107dp"
                android:layout_height="109dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</FrameLayout>