<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentC">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/c"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="355dp" />

        <Button
            android:id="@+id/buttonToGoFragmentD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonGoBackToA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonToGoFragmentD" />

        <TextView
            android:id="@+id/textViewFragmentsC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/buttonToGoFragmentD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>